[gd_scene load_steps=4 format=3 uid="uid://lobby_screen_standalone"]

[ext_resource type="Script" path="res://scripts/ui/lobby_screen_standalone.gd" id="1_lobby_script"]
[ext_resource type="Theme" path="res://resources/ui_theme.tres" id="2_theme"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_sizes/font_size = 200
font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ec1gl"]
font_sizes/font_size = 24
font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kvtbc"]
font_sizes/font_size = 24
font_color = Color(1, 1, 1, 1)

[node name="LobbyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_lobby_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer Lobby"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_1")

[node name="ServerAddressLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Server Address:"
label_settings = SubResource("LabelSettings_ec1gl")

[node name="ServerAddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Enter server address"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready to host or join"
label_settings = SubResource("LabelSettings_kvtbc")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
text = "Back to Main Menu" 